--- a/package.json
+++ b/package.json
@@ -10,43 +10,54 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "github:react-native-async-storage/async-storage",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "date-fns": "^2.29.1",
-    "expo": "~45.0.0",
+    "expo": "~51.0.20",
+    "expo-file-system": "~14.0.0",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-image-picker": "~13.1.1",
+    "expo-media-library": "~14.1.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
+    "firebase": "^10.12.4",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
-    "react": "17.0.2",
+    "react": "18.2.0",
     "react-color-log": "^1.0.12",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.3.1",
     "react-moment": "^1.1.2",
-    "react-native": "0.68.2",
+    "react-native": "0.74.3",
     "react-native-dropdown-picker": "^5.4.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^4.8.5",
-    "react-native-image-slider-box": "^2.0.5",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-internet-connection-alert": "^0.1.9",
     "react-native-progress-dialog": "^0.0.5",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~3.11.1",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-step-indicator": "^1.0.3",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7",
-    "react-redux": "^8.0.2",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "expo-file-system": "~14.0.0",
-    "expo-media-library": "~14.1.0"
+    "react-native-web": "0.19.10",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.3",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
