--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-moment": "^1.1.2",
     "react-native": "0.74.3",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-dropdownalert": "^5.1.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^4.8.5",
     "react-native-image-slider-box": "^2.0.7",
