--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "firebase": "^10.12.4",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-color-log": "^1.0.12",
     "react-dom": "18.2.0",
