--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.21",
     "firebase": "^10.12.4",
+    "i18next": "^23.12.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "patch-package": "^8.0.0",
@@ -37,6 +38,7 @@
     "react": "18.2.0",
     "react-color-log": "^1.0.12",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.0.0",
     "react-moment": "^1.1.2",
     "react-native": "0.74.3",
     "react-native-ad-manager": "^2.0.10",
@@ -46,6 +48,7 @@
     "react-native-image-picker": "^4.8.5",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-internet-connection-alert": "^0.1.9",
+    "react-native-localize": "^3.2.0",
     "react-native-progress-dialog": "^0.0.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
