--- a/app.json
+++ b/app.json
@@ -28,7 +28,10 @@
       },
       "package": "com.atlas.hawta",
       "permissions": [
-        "android.permission.RECORD_AUDIO"
+        "android.permission.RECORD_AUDIO",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
       ]
     },
     "web": {
