--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-dev-client": "~4.0.20",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.4",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.21",
@@ -45,10 +46,12 @@
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-location": "^5.0.0",
     "react-native-image-picker": "^4.8.5",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-internet-connection-alert": "^0.1.9",
     "react-native-localize": "^3.2.0",
+    "react-native-maps": "1.14.0",
     "react-native-progress-dialog": "^0.0.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
