add env send otp page

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^1.7.4",
     "date-fns": "^2.29.1",
     "expo": "~51.0.22",
     "expo-dev-client": "~4.0.20",
@@ -43,6 +44,7 @@
     "react-moment": "^1.1.2",
     "react-native": "0.74.3",
     "react-native-ad-manager": "^2.0.10",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-gesture-handler": "~2.16.1",
