--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/config-plugins": "~8.0.0",
     "@expo/metro-runtime": "~3.2.1",
+    "@fontsource/cairo": "^5.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-firebase/app": "^20.3.0",
