--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "~51.0.22",
     "expo-dev-client": "~4.0.20",
     "expo-file-system": "~17.0.1",
+    "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.4",
