--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.4",
     "date-fns": "^2.29.1",
     "expo": "~51.0.22",
+    "expo-app-loading": "^2.1.1",
     "expo-dev-client": "~4.0.20",
     "expo-file-system": "~17.0.1",
     "expo-font": "^12.0.10",
