--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
+    "@expo/prebuild-config": "~7.0.0",
     "@fontsource/cairo": "^5.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
@@ -25,15 +26,15 @@
     "axios": "^1.7.4",
     "date-fns": "^2.29.1",
     "expo": "^51.0.34",
-    "expo-app-loading": "^2.1.1",
-    "expo-dev-client": "~4.0.20",
+    "expo-dev-client": "~4.0.27",
     "expo-file-system": "~17.0.1",
     "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
-    "expo-media-library": "~16.0.4",
+    "expo-media-library": "~16.0.5",
+    "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.21",
+    "expo-updates": "~0.25.25",
     "firebase": "^10.12.4",
     "i18next": "^23.12.2",
     "moment": "^2.29.4",
@@ -45,7 +46,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^15.0.0",
     "react-moment": "^1.1.2",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-ad-manager": "^2.0.10",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.2",
@@ -75,7 +76,7 @@
     "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.4.0",
-    "jest-expo": "^51.0.0",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
