--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@fontsource/cairo": "^5.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
-    "@react-native-firebase/app": "^20.3.0",
-    "@react-native-firebase/auth": "^20.3.0",
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^20.3.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "date-fns": "^2.29.1",
     "expo": "^51.0.34",
     "expo-dev-client": "~4.0.27",
@@ -58,6 +58,7 @@
     "react-native-internet-connection-alert": "^0.1.9",
     "react-native-localize": "^3.2.0",
     "react-native-maps": "1.14.0",
+    "react-native-otp-entry": "^1.7.2",
     "react-native-progress-dialog": "^0.0.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
