--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-dropdownalert": "^5.1.0",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-location": "^5.0.0",
     "react-native-image-picker": "^4.8.5",
