--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "date-fns": "^2.29.1",
     "expo": "^51.0.34",
     "expo-dev-client": "~4.0.27",
-    "expo-file-system": "~17.0.1",
+    "expo-file-system": "^17.0.1",
     "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
@@ -54,6 +54,7 @@
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-location": "^5.0.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.8.5",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-internet-connection-alert": "^0.1.9",
